--- a/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
+++ b/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
@@ -7,6 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="6.2.2" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstractions\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
 </Project>
