--- a/GeoStat-Mobile/GeoStat.Droid/Properties/AndroidManifest.xml
+++ b/GeoStat-Mobile/GeoStat.Droid/Properties/AndroidManifest.xml
@@ -1,9 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="GeoStat.Droid.GeoStat.Droid" android:installLocation="preferExternal">
-	<uses-sdk android:targetSdkVersion="27" android:minSdkVersion="21" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="geostat.droid.geostat.droid" android:installLocation="preferExternal">
+	<uses-sdk android:targetSdkVersion="27" android:minSdkVersion="21" />  
+
+	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher_round" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
+    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyAl448qraLUPnQilGIMnae7kIPFDFoRXrQ" />
+    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+  </application>
+
+  <permission android:name="geostat.droid.geostat.droid.permission.MAPS_RECEIVE"
+              android:protectionLevel="signature" /> 
+  <uses-permission android:name="geostat.droid.geostat.drodd.permission.MAPS_RECEIVE" />
+  
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher_round" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
+  
+  <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 </manifest>
