--- a/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
+++ b/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.1.1" />
     <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore" Version="4.1.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
