--- a/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
+++ b/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Client.SQLiteStore" Version="4.1.1" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="AutoMapper" Version="8.0.0" />
+    <PackageReference Include="MvvmCross.Plugin.Visibility" Version="6.2.2" />
   </ItemGroup>
 
   <ItemGroup>
