--- a/GeoStat-Mobile/GeoStat.Droid/GeoStat.Droid.csproj
+++ b/GeoStat-Mobile/GeoStat.Droid/GeoStat.Droid.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Plugins\PermissionPlugin.cs" />
     <Compile Include="Plugins\DialogsPlugin.cs" />
     <Compile Include="GeoStatApplication.cs" />
+    <Compile Include="Converters\InvertedVisibilityValueConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -146,7 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeoStat.Common\GeoStat.Common.csproj">
-      <Project>{78D1A60F-A578-47F9-9EE2-EF8D6A41EA37}</Project>
+      <Project>{C1969FA9-EB26-418D-A12A-59BBFD20F069}</Project>
       <Name>GeoStat.Common</Name>
     </ProjectReference>
   </ItemGroup>
@@ -164,6 +165,9 @@
     <AndroidResource Include="Resources\layout\MapView.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
