--- a/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
+++ b/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>GeoStat_Mobile</RootNamespace>
+    <RootNamespace>GeoStat.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,5 +21,6 @@
     <Folder Include="Abstractions\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
+    <Folder Include="Locations\" />
   </ItemGroup>
 </Project>
