--- a/GeoStat-Mobile/GeoStat.Droid/Properties/AndroidManifest.xml
+++ b/GeoStat-Mobile/GeoStat.Droid/Properties/AndroidManifest.xml
@@ -5,8 +5,7 @@
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyAl448qraLUPnQilGIMnae7kIPFDFoRXrQ" />
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
-	<permission android:name="geostat.droid.geostat.droid.permission.MAPS_RECEIVE" android:protectionLevel="signature" />
-	<uses-permission android:name="geostat.droid.geostat.drodd.permission.MAPS_RECEIVE" />
+	<permission android:name="geostat.droid.MAPS_RECEIVE" android:protectionLevel="signature" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
