--- a/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
+++ b/GeoStat-Mobile/GeoStat.Common/GeoStat.Common.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="MvvmCross.Plugin.Visibility" Version="6.2.2" />
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="sameerIOTApps.Plugin.SecureStorage" Version="2.5.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
